# eventex

./: .dockerignore  .env.sample  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
docker/: entrypoint.sh
eventex/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
eventex/core/: tests.py  views.py
eventex/core/static/css/: main.css
eventex/core/templates/: 400.html  403.html  404.html  500.html  base.html  index.html
eventex/core/templates/core/: index.html
eventex/core/tests/: test_view_home.py
eventex/subscriptions/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
eventex/subscriptions/migrations/: 0001_initial.py
eventex/subscriptions/templates/subscriptions/: subscription_email.txt  subscription_form.html
eventex/subscriptions/tests/: test_form_subscription.py  test_mail_subscribe.py  test_model_subscription.py  test_view_subscribe.py
