[tool.poetry]
name = "wttd"
version = "0.1.0"
description = ""
authors = ["Danilo Augusto <dasf_cm@terra.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
whitenoise = "^5.1.0"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2 = "^2.8.5"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
isort = "^5.1.4"
flake8 = "^3.8.3"
black = "^19.10b0"
pre-commit = "^2.6.0"
jupyter = "^1.0.0"
ipython = "^7.17.0"
django-test-without-migrations = "^0.6"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
